--- a/packages/hc_dispatcher_v2_helpers.yaml
+++ b/packages/hc_dispatcher_v2_helpers.yaml
@@ -49,6 +49,14 @@ input_select:
     icon: mdi:vector-link
     initial: "Independent"
 
+  hc_dispatch_force_mode:
+    name: "HC Dispatch Force Mode"
+    options:
+      - Off
+      - Added Only
+      - All
+    initial: Added Only
+
 input_boolean:
   # --- The "Gatekeeper" ---
   hc_dispatcher_auto_approve:
@@ -60,7 +68,7 @@ input_boolean:
     icon: mdi:vector-combine
     initial: off
   hc_dispatch_manual_override:
-    name: "HC Dispatch Manual Override"
+    name: "HC Dispatch Manual Caps Override"
     icon: mdi:alert-octagram
     initial: off
 
@@ -70,6 +78,16 @@ input_button:
     icon: mdi:check-bold
 
 input_number:
+  hc_dispatch_manual_caps_minutes:
+    name: "HC Dispatch Manual Caps Minutes"
+    min: 1
+    max: 1440
+    step: 5
+    mode: box
+    unit_of_measurement: "min"
+    icon: mdi:timer-alert
+    initial: 60
+
   hc_disp_z1_baseline_setpoint_f:
     name: "HC Disp Z1 Baseline Setpoint"
     min: 40
@@ -211,6 +229,27 @@ input_number:
     icon: mdi:vector-combine
     initial: 70
 
+  hc_dispatch_force_delta_f:
+    name: "HC Dispatch Force Delta"
+    min: 0.0
+    max: 5.0
+    step: 0.1
+    mode: box
+    unit_of_measurement: "°F"
+    icon: mdi:thermometer-plus
+    initial: 1.0
+
+  hc_dispatch_force_cap_f:
+    name: "HC Dispatch Force Cap"
+    min: 55
+    max: 80
+    step: 0.5
+    mode: box
+    unit_of_measurement: "°F"
+    icon: mdi:thermometer-chevron-up
+    initial: 75
+
+
 input_text:
   hc_dispatch_approved_batch:
     name: "HC Dispatch Approved Batch (Active)"
@@ -220,6 +259,12 @@ input_text:
   hc_dispatch_last_suggested_batch:
     name: "HC Dispatch Last Suggested Batch"
     icon: mdi:history
+    initial: "none"
+
+  hc_dispatch_last_batch_zones:
+    name: "HC Dispatch Last Batch Zones"
+    icon: mdi:vector-link
+    max: 255
     initial: "none"
 
   hc_dispatch_last_apply_debug:
@@ -233,3 +278,9 @@ input_text:
     icon: mdi:sync
     max: 255
     initial: "none"
+
+input_datetime:
+  hc_dispatch_manual_caps_until:
+    name: "HC Dispatch Manual Caps Until"
+    has_date: true
+    has_time: true
