--- a/packages/hc_dispatcher_setpoint_sync.yaml
+++ b/packages/hc_dispatcher_setpoint_sync.yaml
@@ -19,6 +19,10 @@ automation:
           - climate.zone_8_dining_room
           - climate.zone_9_basement_bedroom
         attribute: temperature
+    condition:
+      - condition: state
+        entity_id: input_boolean.hc_dispatch_reg_enabled
+        state: "off"
     action:
       - variables:
           dispatcher_on: "{{ is_state('input_boolean.hc_dispatcher_mode_enabled','on') }}"
@@ -95,6 +99,115 @@ automation:
                 data:
                   value: "{{ new_temp }}"
 
+  - id: hc_dispatch_manual_override_abort
+    alias: "HC Dispatch Manual Override Abort"
+    mode: queued
+    max: 10
+    trigger:
+      - platform: state
+        entity_id:
+          - climate.z1_first_floor_bedroom_and_bath
+          - climate.zone_2_second_floor_office_and_upper_guest
+          - climate.zone_3_basement_bath_and_common
+          - climate.zone_4_garage
+          - climate.zone_5_virtual_thermostat_first_floor_living
+          - climate.zone_6_master_thermostat
+          - climate.zone_7_basement_bar_and_tv_room_south_side
+          - climate.zone_8_dining_room
+          - climate.zone_9_basement_bedroom
+        attribute: temperature
+    condition:
+      - condition: state
+        entity_id: input_boolean.hc_dispatch_reg_enabled
+        state: "off"
+    action:
+      - variables:
+          dispatcher_on: "{{ is_state('input_boolean.hc_dispatcher_mode_enabled','on') }}"
+          batch_str: "{{ states('input_text.hc_dispatch_last_batch_zones') }}"
+          batch_list: >
+            {% if batch_str not in ['none','unknown','unavailable','', None] %}
+              {{ batch_str.split(',') }}
+            {% else %}
+              {{ [] }}
+            {% endif %}
+          manual_change: "{{ trigger.to_state.context.user_id is not none }}"
+          climate_to_z:
+            climate.z1_first_floor_bedroom_and_bath: z1
+            climate.zone_2_second_floor_office_and_upper_guest: z2
+            climate.zone_3_basement_bath_and_common: z3
+            climate.zone_4_garage: z4
+            climate.zone_5_virtual_thermostat_first_floor_living: z5
+            climate.zone_6_master_thermostat: z6
+            climate.zone_7_basement_bar_and_tv_room_south_side: z7
+            climate.zone_8_dining_room: z8
+            climate.zone_9_basement_bedroom: z9
+          zone_map:
+            z1: climate.z1_first_floor_bedroom_and_bath
+            z2: climate.zone_2_second_floor_office_and_upper_guest
+            z3: climate.zone_3_basement_bath_and_common
+            z4: climate.zone_4_garage
+            z5: climate.zone_5_virtual_thermostat_first_floor_living
+            z6: climate.zone_6_master_thermostat
+            z7: climate.zone_7_basement_bar_and_tv_room_south_side
+            z8: climate.zone_8_dining_room
+            z9: climate.zone_9_basement_bedroom
+          z: "{{ climate_to_z.get(trigger.entity_id) }}"
+          new_temp: "{{ state_attr(trigger.entity_id,'temperature')|float(0) }}"
+      - condition: template
+        value_template: >
+          {{ dispatcher_on
+             and z is not none
+             and batch_list|length > 0
+             and (z in batch_list)
+             and manual_change }}
+      - service: input_text.set_value
+        target:
+          entity_id: input_text.hc_dispatch_last_apply_debug
+        data:
+          value: >
+            manual_abort z={{ z }} new={{ new_temp|round(1) }} batch={{ batch_str }}
+      - service: input_number.set_value
+        target:
+          entity_id: "{{ 'input_number.hc_disp_' ~ z ~ '_baseline_setpoint_f' }}"
+        data:
+          value: "{{ new_temp }}"
+      - service: input_number.set_value
+        target:
+          entity_id: "{{ 'input_number.hc_disp_' ~ z ~ '_setpoint_f' }}"
+        data:
+          value: "{{ new_temp }}"
+      - service: input_text.set_value
+        target:
+          entity_id: input_text.hc_dispatch_batch_callers
+        data:
+          value: "none"
+      - service: input_text.set_value
+        target:
+          entity_id: input_text.hc_dispatch_last_batch_zones
+        data:
+          value: "none"
+      - repeat:
+          for_each: "{{ batch_list }}"
+          sequence:
+            - variables:
+                zb: "{{ repeat.item }}"
+                climate: "{{ zone_map[zb] }}"
+                baseline: "{{ states('input_number.hc_disp_' ~ zb ~ '_baseline_setpoint_f')|float(0) }}"
+            - condition: template
+              value_template: "{{ baseline > 0 }}"
+            - service: input_number.set_value
+              target:
+                entity_id: "{{ 'input_number.hc_disp_' ~ zb ~ '_setpoint_f' }}"
+              data:
+                value: "{{ baseline }}"
+            - service: climate.set_temperature
+              data:
+                entity_id: "{{ climate }}"
+                temperature: "{{ baseline }}"
+      - service: input_boolean.turn_off
+        target:
+          entity_id: input_boolean.hc_dispatcher_mode_enabled
+
   - id: hc_dispatch_sync_targets_off
     alias: "HC Dispatch Sync Targets (Dispatcher Off)"
     mode: queued
@@ -115,6 +228,9 @@ automation:
           - input_number.hc_disp_z8_baseline_setpoint_f
           - input_number.hc_disp_z9_baseline_setpoint_f
     condition:
+      - condition: state
+        entity_id: input_boolean.hc_dispatch_reg_enabled
+        state: "off"
       - condition: state
         entity_id: input_boolean.hc_dispatcher_mode_enabled
         state: "off"
@@ -138,6 +254,10 @@ automation:
       - platform: state
         entity_id: input_boolean.hc_dispatcher_mode_enabled
         to: "off"
+    condition:
+      - condition: state
+        entity_id: input_boolean.hc_dispatch_reg_enabled
+        state: "off"
     action:
       - variables:
           zone_map:
